// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={true}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className="ui-shared__button tss-u02dqw-button  ui-shared__ripple-button"
      disabled={true}
      onClick={null}
      testId="Button"
    >
      <button
        className="ui-shared__button tss-u02dqw-button  ui-shared__ripple-button tss-16c9pag-root common__button"
        data-test-id="Button"
        disabled={true}
        onClick={null}
      >
        <div
          className="tss-p9yt3o-content"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button tss-hgw3or-button  ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="ui-shared__button tss-hgw3or-button  ui-shared__ripple-button tss-16c9pag-root common__button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="tss-1hy7q46-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple tss-1hy7q46-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="primary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button tss-hgw3or-button  ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="ui-shared__button tss-hgw3or-button  ui-shared__ripple-button tss-16c9pag-root common__button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="tss-1hy7q46-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple tss-1hy7q46-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="regular"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button tss-1cs55nz-button  ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="ui-shared__button tss-1cs55nz-button  ui-shared__ripple-button tss-16c9pag-root common__button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="tss-1hy7q46-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple tss-1hy7q46-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <Button
    className=" ui-shared__ripple-button"
    disabled={false}
    flat={false}
    onClick={null}
    testId="Button"
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="ui-shared__button tss-x945ka-button  ui-shared__ripple-button"
      disabled={false}
      onClick={null}
      testId="Button"
    >
      <button
        className="ui-shared__button tss-x945ka-button  ui-shared__ripple-button tss-16c9pag-root common__button"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="tss-1hy7q46-contentWrapper"
          color="#000"
          disabled={false}
          fill={true}
          onClick={[Function]}
          onComplete={[Function]}
          overflow={true}
          size={null}
        >
          <div
            className="ui-shared__ripple tss-1hy7q46-contentWrapper"
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
